Trial fix with z-index

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -54,6 +54,7 @@ a {
       bottom: 0;
       background: $dark-pink;
       border-radius: inherit;
+      z-index: -1;
       box-shadow: 0 0 0 2px $pink-border, 0 0.30em 0 0 $pink-shadow;
       transform: translate3d(0, 0.75em, -1em);
       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
